xliff-22/test-suite/core/invalid/bad_InvalidExtensionAttributeOnSegment.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en"
       xmlns:my="myNS">
 <file id="f1" my:okAttr="val">
  <group id="g1" my:okAttr="val">
   <unit id="1" my:okAttr="val">
    <segment id="1" my:badAttr="val">
     <source>text</source>
    </segment>
   </unit>
  </group>
 </file>
</xliff>
